tests/reference/asr_preprocess-cpp1-515bcd9.stderr
input:7:13 semantic error: Variable 'z12345678' not declared
print *, x, X123, y
            ^~~~
